# evscheduler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 45563bf4f9e5_datetime_with_timezone.py  c0b405d89ddd_initial_migration.py
backend/app/: celery_app.py  database.py  main.py  scalars.py  schema.graphql
backend/app/models/: __init__.py  charging_session.py  charging_slot.py  tariff.py  vehicle.py
backend/app/repositories/: __init__.py  charging_session_repository.py  vehicle_repository.py
backend/app/resolvers/: mutation.py  query.py
backend/app/services/: scheduler_service.py  tariff_service.py
backend/app/tasks/: scheduler.py
backend/octopus_api_collection/: Account.yml  Agile.yml  Products.yml  opencollection.yml
backend/octopus_api_collection/environments/: env.example.yml
backend/tests/: conftest.py  test_models.py  test_repositories.py  test_resolvers.py  test_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apolloClient.ts
frontend/src/components/: ChargingForm.tsx  Dashboard.tsx  TariffChart.tsx
frontend/src/graphql/: mutations.ts  queries.ts
frontend/src/types/: index.ts
frontent/: .gitignore  codegen.ts  package-lock.json  package.json
frontent/app/: ApolloClient.ts  ApolloWrapper.tsx  env.ts  globals.css  layout.tsx  page.tsx
frontent/app/__generated__/: gql.ts  graphql.ts
frontent/app/ui/: Navbar.tsx  (+3 more)
