[project]
name = "ev-scheduler"
version = "0.1.0"
description = "A scheduler for electric vehicle charging"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "ariadne>=1.0.1",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.49",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
